tests/testcases/invalid/semantic/12_continue_outside_loop.ciel
// Error: 'continue' statement not within a loop
int main() {
    continue;
    return 0;
}
